@startuml

title __VENTANA's Class Diagram__\n

  namespace es.ull.patrones.practica3.Ventana {
    class es.ull.patrones.practica3.Ventana.PadelElementViewer {
        - descriptionLabel : JLabel
        - elementList : JList<String>
        - listModel : DefaultListModel<String>
        - padelElements : List<Object>
        + PadelElementViewer()
        + loadAndDisplayElements()
        {static} + main()
    }
  }
  

  namespace es.ull.patrones.practica3.Ventana {
    interface es.ull.patrones.practica3.Ventana.SportsElementViewer {
    }
  }
  

  namespace es.ull.patrones.practica3.Ventana {
    class es.ull.patrones.practica3.Ventana.SportsSelectionGUI {
        - selectSportButton : JButton
        - sportComboBox : JComboBox<String>
        - sports : Set<String>
        + SportsSelectionGUI()
        {static} + main()
        - createViewerForSport()
        - downloadAndLoadCSV()
        - downloadCSVFromURL()
        - loadSportsFromCSV()
    }
  }
  

  es.ull.patrones.practica3.Ventana.PadelElementViewer .up.|> es.ull.patrones.practica3.Ventana.SportsElementViewer
  es.ull.patrones.practica3.Ventana.PadelElementViewer o-- es.ull.patrones.practica3.Elements.PadelBall : padelBall
  es.ull.patrones.practica3.Ventana.PadelElementViewer o-- es.ull.patrones.practica3.Factories.PadelFactory : padelFactory
  es.ull.patrones.practica3.Ventana.PadelElementViewer o-- es.ull.patrones.practica3.Elements.PadelFootwear : padelFootwear
  es.ull.patrones.practica3.Ventana.PadelElementViewer o-- es.ull.patrones.practica3.Elements.PadelTShirt : padelTshirt
  es.ull.patrones.practica3.Ventana.SportsSelectionGUI -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
